--- a/com.core447.StreamController.yml
+++ b/com.core447.StreamController.yml
@@ -91,11 +91,13 @@ modules:
       - install -D flatpak/icon_256.png /app/share/icons/hicolor/256x256/apps/com.core447.StreamController.png
       - install -D flatpak/launch.desktop /app/share/applications/com.core447.StreamController.desktop
       - install -D flatpak/com.core447.StreamController.metainfo.xml /app/share/metainfo/com.core447.StreamController.metainfo.xml
+      - mkdir /app/share/icons/StreamController
+      - cp -r flatpak/com.core447.StreamController/flatpak/icons /app/share/icons/StreamController
     sources:
       - type: git
         url: https://github.com/StreamController/StreamController.git
-        # tag: 1.4.10-beta
-        branch: main
+        # tag: 1.4.11-beta
+        branch: ship-icons
 
 # Install via: flatpak-builder --repo=repo --force-clean --install --user build-dir com.core447.StreamController.yml
 # Use git submodule update --init if the shared-modules folder is empty
